# software-orchestration

.github/workflows/: devskim.yml
eclipse-ankaios/config/: startupState.yaml
scenarios/smart-trailer/applications/smart_trailer_application/: Cargo.toml
scenarios/smart-trailer/applications/smart_trailer_application/src/: main.rs
scenarios/smart-trailer/digital-twin-model/: Cargo.toml
scenarios/smart-trailer/digital_twin_providers/common/: Cargo.toml
scenarios/smart-trailer/digital_twin_providers/common/src/: utils.rs
scenarios/smart-trailer/digital_twin_providers/trailer_connected_provider/: Cargo.toml
scenarios/smart-trailer/digital_twin_providers/trailer_connected_provider/proto_build/: Cargo.toml
scenarios/smart-trailer/digital_twin_providers/trailer_connected_provider/src/: main.rs  trailer_connected_provider_impl.rs
scenarios/smart-trailer/digital_twin_providers/trailer_properties_provider/: Cargo.toml
scenarios/smart-trailer/digital_twin_providers/trailer_properties_provider/src/: main.rs  trailer_properties_provider_impl.rs
