[package]
name = "smart_trailer_application"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
digital-twin-model = { path = "../../digital-twin-model" }
digital_twin_providers_common = { path = "../../digital_twin_providers/common" }
env_logger= "0.10.0"
log = "0.4.20"
# Managed Subscribe Module interface is located here
core-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji", tag = "0.1.0" }
paho-mqtt = "0.12"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.11.0" }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }