[package]
name = "trailer_connected_provider"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# In-Vehicle Digital Twin interfaces
core-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji", tag = "0.1.0" }
digital-twin-model = { path = "../../digital-twin-model" }
digital_twin_providers_common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.20"
serde = "1.0.190"
serde_derive = "1.0.163"
serde_json = "^1.0"
smart_trailer_interfaces = { path = "./proto_build" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.11.0"
