# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "trailer_properties_provider"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Managed Subscribe Module and In-Vehicle Digital Twin interfaces
core-protobuf-data-access = { git = "https://github.com/eclipse-ibeji/ibeji", tag = "0.1.0" }
digital-twin-model = { path = "../../digital-twin-model" }
digital_twin_providers_common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.20"
paho-mqtt = "0.12"
parking_lot = "0.12.1"
serde = "1.0.190"
serde_derive = "1.0.187"
serde_json = "^1.0"
strum = "0.25"
strum_macros = "0.25.1"
tokio = { version="1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.11.0"
